[project]
name = "dj-beat-match-helper"
version = "0.1.0"
description = "Streamlit app to estimate BPM and suggest pitch for beat matching"
authors = [
  { name = "gabboDTD", email = "gabbo.spina@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
package-mode = false

# Target a runtime that has prebuilt wheels for our stack
requires-python = ">=3.11,<3.12"

dependencies = [
  # UI
  "streamlit>=1.48.1,<2.0.0",
  "plotly>=5,<6",

  # Audio + DSP
  "librosa==0.10.2.post1",
  "soundfile>=0.13.1,<0.14.0",
  "audioread>=3.0.1,<4.0.0",

  # Pin a compatible NumPy/SciPy pair for librosa on Py3.11
  "numpy==1.26.4",
  "scipy==1.11.4"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.10"
isort = "^6.0.1"
mypy = "^1.17.1"
